Wed Jan 16 17:21:26 2002  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/attrs.html, htdoc/hts_form.html: Described how to use
	relative dates for startyear et al.

Wed Jan 16 16:58:05 2002  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc (buildMatchList): Fixed startday et al. to
	allow relative days, month & years if values are negative.

Fri Jan 11 20:57:51 2002  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/attrs.html: Updated descriptions for translate_* attributes
	to match the new default behavior.

Fri Jan 11 17:48:54 2002  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/SGMLEntities.cc (translateAndUpdate): Added support for
	translate_latin1 attribute, to turn off ISO-8859-1-specific entities.
	* htcommon/defaults.cc: Added translate_latin1 attribute.
	* htdoc/attrs.html, htdoc/cf_by{name,prog}.html: Documented it.

Fri Jan 11 17:14:54 2002  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* contrib/xmlsearch.{README,tar.gz}: Removed older xmlsearch package.

Fri Jan 11 17:06:09 2002  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* contrib/xmlsearch/*: Added files contributed by Nathan Hand and
	me to implement XML output from htsearch, including DTD, templates
	and config file.

Wed Jan  9 22:08:21 2002  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* CONFIG.in: Fixed to allow setting BIN_DIR by configure option.
	* contrib/htdig-3.1.6.spec: Fixed to make use of new ./configure
	options for pathnames, do away with patch file.  Used variables for
	many pathnames to allow easy changes.

Wed Jan  9 16:22:32 2002  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/ExternalParser.cc (parse): Added support for max_keywords
	attribute.

Wed Jan  9 16:10:44 2002  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc (HTML, do_tag), htdig/ExternalParser.cc (parse):
	Added support for description_meta_tag_names attribute.
	Ensure external parser interface accepts META descriptions even if